--- a/Blog/templates/blog/post_list.html
+++ b/Blog/templates/blog/post_list.html
@@ -8,17 +8,13 @@
 	<div>
 		<h1><a href="">iKenshu Blog</a></h1>
 	</div>
-
-	<div>
-		<p>published: 27.08.2015 11:37</p>
-		<h2><a href="">Primera entrada</a></h2>
-		<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reiciendis molestias ducimus omnis nihil ex, sapiente nobis commodi sunt rem similique, necessitatibus quis ab perspiciatis repellendus possimus iste, obcaecati! Enim, at?Repellat atque eos quae quam, rerum ducimus sapiente aspernatur veniam. Eius excepturi pariatur sunt aspernatur odit impedit reiciendis, commodi ipsum alias error, est, earum quam animi laboriosam deserunt, eos minima!</p>
-	</div>
-
-	<div>
-		<p>published: 27.08.2015 11:37</p>
-		<h2><a href="">Segunda entrada</a></h2>
-		<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reiciendis molestias ducimus omnis nihil ex, sapiente nobis commodi sunt rem similique, necessitatibus quis ab perspiciatis repellendus possimus iste, obcaecati! Enim, at?Repellat atque eos quae quam, rerum ducimus sapiente aspernatur veniam. Eius excepturi pariatur sunt aspernatur odit impedit reiciendis, commodi ipsum alias error, est, earum quam animi laboriosam deserunt, eos minima!</p>
-	</div>
+	
+	{% for post in posts %}
+		<div>
+			<p>{{ post.published_date }}</p>
+			<h1><a href="">{{ post.title }}</a></h1>
+			<p> {{post.text|linebreaks }}</p>
+		</div>
+	{% endfor %}
 </body>
 </html>
