--- a/Blog/templates/blog/post_list.html
+++ b/Blog/templates/blog/post_list.html
@@ -4,7 +4,7 @@
 	{% for post in posts %}
 		<div class="Post">
 			<div class="date">{{ post.published_date }}</div class="date">
-			<h1><a href="{% url 'post_detail' pk=post.pk %}">{{ post.title }}</a></h1>
+			<h1><a href={% url 'post_detail' pk=post.pk %}>{{ post.title }}</a></h1>
 			<p> {{post.text|linebreaks }}</p>
 		</div>
 	{% endfor %}
