Modificando a Class Based-views

--- a/Blog/templates/blog/post_list.html
+++ b/Blog/templates/blog/post_list.html
@@ -1,7 +1,7 @@
 {% extends "blog/base.html" %}
 
 {% block content %}
-	{% for post in posts %}
+	{% for post in object_list %}
 		<div class="Post">
 			<div class="date">{{ post.published_date }}</div class="date">
 			<h1><a href={% url 'post_detail' pk=post.pk %}>{{ post.title }}</a></h1>
