--- a/Blog/templates/blog/post_detail.html
+++ b/Blog/templates/blog/post_detail.html
@@ -8,6 +8,7 @@
 			</div>
 		{% endif %}
 			<a class="btn btn-default" href="{% url "post_edit" pk=post.pk %}"><span class="glyphicon glyphicon-pencil"></span></a>
+			<a class="btn btn-default" href="{% url "post_remove" pk=post.pk %}"><span class="glyphicon glyphicon-remove"></span></a>
 		<h1>
 			{{ post.title }}
 		</h1>
