--- a/Blog/templates/blog/base.html
+++ b/Blog/templates/blog/base.html
@@ -12,7 +12,9 @@
 </head>
 <body>
 	<div class="Header">
+		{% if user.is_authenticated %}
 			<a href="{% url "post_new" %}" class="top-menu"><span class="glyphicon glyphicon-plus"></span></a>
+		{% endif %}
 		<h1><a href="/">Kevin Morales</a></h1>
 	</div>
 	<div class="content container">
