--- a/Blog/templates/blog/post_detail.html
+++ b/Blog/templates/blog/post_detail.html
@@ -7,8 +7,10 @@
 				{{ post.published_date }}
 			</div>
 		{% endif %}
-			<a class="btn btn-default" href="{% url "post_edit" pk=post.pk %}"><span class="glyphicon glyphicon-pencil"></span></a>
-			<a class="btn btn-default" href="{% url "post_remove" pk=post.pk %}"><span class="glyphicon glyphicon-remove"></span></a>
+			{% if user.is_authenticated %}
+				<a class="btn btn-default" href="{% url "post_edit" pk=post.pk %}"><span class="glyphicon glyphicon-pencil"></span></a>
+				<a class="btn btn-default" href="{% url "post_remove" pk=post.pk %}"><span class="glyphicon glyphicon-remove"></span></a>
+			{% endif %}
 		<h1>
 			{{ post.title }}
 		</h1>
