--- a/Blog/templates/blog/base.html
+++ b/Blog/templates/blog/base.html
@@ -4,27 +4,21 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Blog</title>
-	<link href='https://fonts.googleapis.com/css?family=Lora' rel='stylesheet' type='text/css'>
-	<link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
-	<link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap-theme.min.css">
+	<link href='https://fonts.googleapis.com/css?family=Roboto' rel='stylesheet' type='text/css'>
 	<link rel="stylesheet" href="{% static "css/normalize.css" %}">
 	<link rel="stylesheet" href="{% static "css/blog.css" %}">
 </head>
 <body>
-	<div class="Header">
+	<header class="Header">
 		{% if user.is_authenticated %}
 			<a href="{% url "post_new" %}" class="top-menu"><span class="glyphicon glyphicon-plus"></span></a>
 		{% endif %}
-		<h1><a href="/">Kevin Morales</a></h1>
-	</div>
-	<div class="content container">
-		<div class="row">
-			<div class="col-md-8">
-				{% block content %}
-					
-				{% endblock content %}
-			</div>
-		</div>
-	</div>
+		<h1><a class="Header-title" href="/">Kevin Morales</a></h1>
+	</header>
+	<section class="Post">
+		{% block content %}
+			
+		{% endblock content %}
+	</section>
 </body>
 </html>
